@@ -4,6 +4,7 @@ import com.amarnath.movie.dto.MovieDTO;
 import com.amarnath.movie.entity.Movie;
 import com.amarnath.movie.errorhandeling.ApplicationException;
 import com.amarnath.movie.repository.MovieRepository;
+import com.amarnath.movie.repository.RatingRepository;
 import com.amarnath.movie.service.MovieService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,22 +18,25 @@ import java.util.stream.Collectors;
 @Service
 public class MovieServiceImpl implements MovieService {
 
-	private final MovieRepository movieRepostory;
+	private final MovieRepository movieRepository;
 	private final ModelMapper mapper;
 
+	private final RatingRepository ratingRepository;
+
 	@Autowired
-	public MovieServiceImpl(MovieRepository movieRepostory, ModelMapper mapper) {
+	public MovieServiceImpl(MovieRepository movieRepository, ModelMapper mapper, RatingRepository ratingRepository) {
 		super();
-		this.movieRepostory = movieRepostory;
+		this.movieRepository = movieRepository;
 		this.mapper = mapper;
+		this.ratingRepository = ratingRepository;
 	}
 
 	@Override
 	public List<MovieDTO> getAllMovies() {
 
-		List<Movie> movieEntityResponse = movieRepostory.findAll();
+		List<Movie> movieEntityResponse = movieRepository.findAll();
 
-		return movieEntityResponse.stream().map(movie -> mapToDto(movie))
+		return movieEntityResponse.stream().map(this::mapToDto)
 				.collect(Collectors.toList());
 
 	}
@@ -42,7 +46,7 @@ public class MovieServiceImpl implements MovieService {
 
 		Movie reaceavedMovie = mapToEntity(movieDTO);
 
-		Movie savedMovie = movieRepostory.save(reaceavedMovie);
+		Movie savedMovie = movieRepository.save(reaceavedMovie);
 
 		return mapToDto(savedMovie);
 	}
@@ -50,7 +54,7 @@ public class MovieServiceImpl implements MovieService {
 	@Override
 	public MovieDTO getMovieById(int id) {
 
-		List<Movie> movieEntityResponse = movieRepostory.findAll();
+		List<Movie> movieEntityResponse = movieRepository.findAll();
 
 		Predicate<? super Movie> predicate = (movie -> movie.getId() == id);
 		Movie movieById = movieEntityResponse.stream().filter(predicate).findFirst().orElseThrow(() ->
@@ -67,7 +71,7 @@ public class MovieServiceImpl implements MovieService {
 	@Override
 	public MovieDTO updateMovieById(int id, MovieDTO movieDTO) {
 
-		List<Movie> movieEntityResponse = movieRepostory.findAll();
+		List<Movie> movieEntityResponse = movieRepository.findAll();
 
 		Predicate<? super Movie> predicate = (movie -> movie.getId() == id);
 		Movie movieById = movieEntityResponse.stream().filter(predicate).findFirst().orElseThrow(() ->
@@ -79,13 +83,13 @@ public class MovieServiceImpl implements MovieService {
 
 		movieById.setName(movieDTO.getName());
 		movieById.setDescription(movieDTO.getDescription());
-		movieById.setRating(movieDTO.getRating());
 		movieById.setImageUrl(movieDTO.getImageUrl());
 		movieById.setNumberOfEpisodes(movieDTO.getNumberOfEpisodes());
 		movieById.setAirDate(movieDTO.getAirDate());
 		movieById.setEndDate(movieDTO.getEndDate());
+		movieById.setRating(ratingRepository.save(movieDTO.getRating()));
 
-		Movie savedResponse = movieRepostory.save(movieById);
+		Movie savedResponse = movieRepository.save(movieById);
 
 		return mapToDto(savedResponse);
 
@@ -94,12 +98,12 @@ public class MovieServiceImpl implements MovieService {
 	@Override
 	public List<MovieDTO> getMovieByName(String name) {
 
-		List<Movie> movieEntityResponse = movieRepostory.findAll();
+		List<Movie> movieEntityResponse = movieRepository.findAll();
 
 		Predicate<? super Movie> predicate = (movie -> movie.getName().contains(name.toLowerCase()));
-		List<Movie> collect = movieEntityResponse.stream().filter(predicate).collect(Collectors.toList());
+		List<Movie> collect = movieEntityResponse.stream().filter(predicate).toList();
 
-		List<MovieDTO> movieDTOStream = collect.stream().map(movie -> mapToDto(movie)).collect(Collectors.toList());
+		List<MovieDTO> movieDTOStream = collect.stream().map(this::mapToDto).collect(Collectors.toList());
 
 		if(movieDTOStream.isEmpty()){
 
@@ -117,7 +121,7 @@ public class MovieServiceImpl implements MovieService {
 	@Override
 	public String deleteMovieById(int id) {
 
-		List<Movie> movieEntityResponse = movieRepostory.findAll();
+		List<Movie> movieEntityResponse = movieRepository.findAll();
 
 		Predicate<? super Movie> predicate = (movie -> movie.getId() == id);
 		Movie movieById = movieEntityResponse.stream().filter(predicate).findFirst().orElseThrow(() ->
@@ -127,7 +131,7 @@ public class MovieServiceImpl implements MovieService {
 						HttpStatus.NOT_FOUND
 				));
 
-		movieRepostory.delete(movieById);
+		movieRepository.delete(movieById);
 
 		return "The Movie or Series has been deleted!";
 	}
